--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -1,7 +1,7 @@
 uuid: d5963a02-79be-4084-941c-a028821901c6
 name: testd9law
 mail: leoman730@gmail.com
-slogan: ''
+slogan: 'Hello World'
 page:
   403: ''
   404: ''
